@@ -41,6 +41,9 @@ SCSI controllers in VM settings.
 Changed new controller names when creating a new VM to align with
 VirtualBox naming conventions.
 
+Added support for setting VNC properties in the Remote Display tab
+of VM settings (beta). The console tab is still RDP specific.
+
 -------------------------------------
 	4.2-6	2013-07-22
 -------------------------------------
